--- a/app/src/main/res/layout/row_adapter2.xml
+++ b/app/src/main/res/layout/row_adapter2.xml
@@ -9,28 +9,31 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="125dp"
-        android:layout_height="40dp"
+        android:layout_width="176dp"
+        android:layout_height="64dp"
         android:layout_marginStart="143dp"
         android:layout_marginTop="213dp"
         android:layout_marginEnd="143dp"
+        android:layout_marginBottom="66dp"
         android:text="TextView"
         android:textSize="30dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:layout_marginEnd="176dp"
+        android:layout_width="288dp"
+        android:layout_height="32dp"
+        android:layout_marginStart="61dp"
+        android:layout_marginEnd="62dp"
         android:layout_marginBottom="356dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
