--- a/app/src/main/res/layout/row_adapte_bis.xml
+++ b/app/src/main/res/layout/row_adapte_bis.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:id="@+id/mainLayout"
+    android:id="@+id/mainLayout2"
     android:padding="6dip" >
 
     <ImageView
@@ -17,7 +17,7 @@
         android:layout_marginRight="6dp"
         android:layout_marginBottom="0dp"
         android:contentDescription="TODO"
-        app:srcCompat="@drawable/pokemon" />
+        app:srcCompat="@drawable/ability_icon" />
 
     <TextView
         android:id="@+id/secondLine"
