--- a/app/src/main/res/layout/activity_main_bis.xml
+++ b/app/src/main/res/layout/activity_main_bis.xml
@@ -18,6 +18,7 @@
         android:layout_marginBottom="75dp"
         android:text="Ability"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/custom_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,6 +34,7 @@
         android:layout_marginBottom="75dp"
         android:text="Pokemon"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@drawable/custom_button"
         app:layout_constraintEnd_toStartOf="@+id/button2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
