--- a/app/src/main/res/layout/activity_main_bis.xml
+++ b/app/src/main/res/layout/activity_main_bis.xml
@@ -48,14 +48,14 @@
         android:layout_marginTop="79dp"
         android:layout_marginEnd="93dp"
         android:layout_marginBottom="46dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/pokemon_logo" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView2"
         android:layout_width="244dp"
         android:layout_height="185dp"
         android:layout_marginStart="92dp"
