--- a/app/src/main/res/layout/row_adapter.xml
+++ b/app/src/main/res/layout/row_adapter.xml
@@ -16,30 +16,20 @@
         android:layout_marginTop="0dp"
         android:layout_marginRight="6dp"
         android:layout_marginBottom="0dp"
-        android:contentDescription="TODO"
         app:srcCompat="@drawable/pokemon" />
 
-    <TextView
-        android:id="@+id/secondLine"
-        android:layout_width="fill_parent"
-        android:layout_height="26dip"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/icon"
-        android:text="Description"
-        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/firstLine"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/secondLine"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
+        android:layout_width="342dp"
+        android:layout_height="53dp"
         android:layout_alignWithParentIfMissing="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginLeft="-1dp"
         android:layout_toRightOf="@id/icon"
+        android:textStyle="bold"
         android:gravity="center_vertical"
         android:text="Example application"
-        android:textSize="16sp" />
+        android:textSize="20sp" />
 
 </RelativeLayout>
