--- a/app/src/main/res/layout/row_adapter2.xml
+++ b/app/src/main/res/layout/row_adapter2.xml
@@ -7,30 +7,47 @@
     android:layout_height="match_parent">
 
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="408dp"
+        android:layout_height="169dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="44dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/pokemon2" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="176dp"
         android:layout_height="64dp"
         android:layout_marginStart="143dp"
-        android:layout_marginTop="213dp"
+        android:layout_marginTop="44dp"
         android:layout_marginEnd="143dp"
         android:layout_marginBottom="66dp"
         android:text="TextView"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="30dp"
         android:textStyle="bold"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="288dp"
-        android:layout_height="32dp"
+        android:layout_width="176dp"
+        android:layout_height="42dp"
         android:layout_marginStart="61dp"
         android:layout_marginEnd="62dp"
         android:layout_marginBottom="356dp"
         android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
