--- a/app/src/main/res/layout/row_adapter_3.xml
+++ b/app/src/main/res/layout/row_adapter_3.xml
@@ -7,33 +7,46 @@
     android:layout_height="match_parent">
 
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="420dp"
+        android:layout_height="237dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/attack" />
+
     <TextView
         android:id="@+id/textView5"
-        android:layout_width="176dp"
-        android:layout_height="64dp"
+        android:layout_width="268dp"
+        android:layout_height="62dp"
         android:layout_marginStart="143dp"
-        android:layout_marginTop="213dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="143dp"
-        android:layout_marginBottom="66dp"
         android:text="TextView"
-        android:textSize="30dp"
+        android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="35dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="288dp"
-        android:layout_height="32dp"
+        android:layout_width="295dp"
+        android:layout_height="166dp"
         android:layout_marginStart="61dp"
         android:layout_marginEnd="62dp"
-        android:layout_marginBottom="356dp"
+        android:layout_marginBottom="50dp"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
         app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
